deploy windows container buildx windows openssl

--- a/dockerfiles/Dockerfile.windows
+++ b/dockerfiles/Dockerfile.windows
@@ -2,8 +2,21 @@
 
 ARG WINDOWS_VERSION=ltsc2019
 
+# FROM chocolatey/choco:latest-windows as chocolatey
+
+# ENV chocolateyUseWindowsCompression 'true'
+
+# RUN choco install openssl -y install
+
 # Builder Image - Windows Server Core
 FROM mcr.microsoft.com/windows/servercore:$WINDOWS_VERSION as builder
+
+# add proxy to powershell profile for all users
+ADD proxy.ps1 C:\Windows\System32\WindowsPowerShell\v1.0\profile.ps1
+# Install Chocolatey
+RUN powershell -ExecutionPolicy unrestricted -Command `
+    iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
+RUN choco install openssl
 
 RUN setx /M PATH "%PATH%;C:\BuildTools\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin;C:\WinFlexBison"
 
@@ -43,7 +56,8 @@ WORKDIR /src/build
 COPY . /src/
 
 RUN cmake -G "'Visual Studio 16 2019'" -DCMAKE_BUILD_TYPE=Release ../; `
-    cmake --build . --config Release;
+    cmake --build . --config Release; 
+    # -DOPENSSL_ROOT_DIR=;
 
 # Set up config files and binaries in single /fluent-bit hierarchy for easy copy in later stage
 RUN New-Item -Path  /fluent-bit/etc/ -ItemType "directory"; `
