--- a/dockerfiles/Dockerfile.windows
+++ b/dockerfiles/Dockerfile.windows
@@ -15,6 +15,7 @@ FROM mcr.microsoft.com/windows/servercore:$WINDOWS_VERSION as builder
 # Install Chocolatey
 RUN powershell -ExecutionPolicy unrestricted -Command `
     iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
+SHELL ["cmd", "/S", "/C"] 
 RUN choco install openssl
 
 
