--- a/dockerfiles/Dockerfile.windows
+++ b/dockerfiles/Dockerfile.windows
@@ -2,22 +2,8 @@
 
 ARG WINDOWS_VERSION=ltsc2019
 
-# FROM chocolatey/choco:latest-windows as chocolatey
-
-# ENV chocolateyUseWindowsCompression 'true'
-
-# RUN choco install openssl -y install
-
 # Builder Image - Windows Server Core
 FROM mcr.microsoft.com/windows/servercore:$WINDOWS_VERSION as builder
-
-# add proxy to powershell profile for all users
-# Install Chocolatey
-# RUN powershell -ExecutionPolicy unrestricted -Command `
-#     iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
-# SHELL ["cmd", "/S", "/C"] 
-# RUN choco install openssl
-
 
 ENV OPENSSL_VERSION 1.1.0.60000000
 ENV chocolateyUseWindowsCompression false
@@ -62,9 +48,10 @@ COPY . /src/
 
 RUN iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1')); `
     choco feature disable --name showDownloadProgress ; `
-    choco install -y openssl.light --version $env:OPENSSL_VERSION
+    choco install openssl;`
+    Copy-Item -Path Files/OpenSSL/ -Destination /src/build/;
 
-RUN cmake -G "'Visual Studio 16 2019'" -DCMAKE_BUILD_TYPE=Release -DOPENSSL_ROOT_DIR='C:\Program Files\OpenSSL' ../; `
+RUN cmake -G "'Visual Studio 16 2019'" -DCMAKE_BUILD_TYPE=Release -DOPENSSL_ROOT_DIR='/OpenSSL' ../; `
     cmake --build . --config Release; 
     
 
