--- a/dockerfiles/Dockerfile.windows
+++ b/dockerfiles/Dockerfile.windows
@@ -48,7 +48,7 @@ COPY . /src/
 
 RUN iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1')); `
     choco feature disable --name showDownloadProgress ; `
-    choco install openssl;`
+    choco install -y openssl.light --version $env:OPENSSL_VERSION;`
     Copy-Item -Path Files/OpenSSL/ -Destination /src/build/;
 
 RUN cmake -G "'Visual Studio 16 2019'" -DCMAKE_BUILD_TYPE=Release -DOPENSSL_ROOT_DIR='/OpenSSL' ../; `
