--- a/dockerfiles/Dockerfile.windows
+++ b/dockerfiles/Dockerfile.windows
@@ -48,10 +48,14 @@ COPY . /src/
 
 RUN iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1')); `
     choco feature disable --name showDownloadProgress ; `
-    choco install -y openssl.light --version $env:OPENSSL_VERSION;
-    # Copy-Item -Path Files/OpenSSL/ -Destination /src/build/;
+    choco install -y openssl.light --version $env:OPENSSL_VERSION;`
+    Get-Item "/Program Files/OpenSSL";`
+    Copy-Item -Path "/Program Files/OpenSSL" -Destination /src/build/;`
+    Get-Item "/src/build";`
+    Get-Item "/src/build/OpenSSL";
 
-RUN cmake -G "'Visual Studio 16 2019'" -DCMAKE_BUILD_TYPE=Release -DOPENSSL_ROOT_DIR="C:\Program Files\OpenSSL" ../; ` 
+
+RUN cmake -G "'Visual Studio 16 2019'" -DCMAKE_BUILD_TYPE=Release -DOPENSSL_ROOT_DIR="/Program Files/OpenSSL" ../; ` 
     cmake --build . --config Release; 
     
 #-DOPENSSL_ROOT_DIR='/OpenSSL'
