--- a/.github/workflows/call-build-images-windows.yaml
+++ b/.github/workflows/call-build-images-windows.yaml
@@ -104,9 +104,9 @@ jobs:
       #   with:
       #     platforms: all
 
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@master
+      # - name: Set up Docker Buildx
+      #   id: buildx
+      #   uses: docker/setup-buildx-action@master
 
       - name: Build the production images
         run: |
