--- a/dockerfiles/Dockerfile.windows
+++ b/dockerfiles/Dockerfile.windows
@@ -17,9 +17,9 @@ WORKDIR /local
 RUN iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1')); `
     choco feature disable --name showDownloadProgress ; `
     choco install -y openssl.light --version $env:OPENSSL_VERSION;`
-    Get-Item '/Program Files/OpenSSL'/*;`
+    Get-Item '/Program Files/OpenSSL/*';`
     Copy-Item -Path '/Program Files/OpenSSL' -Destination /src/build/;`
-    Get-Item '/src/build'/*;`
+    Get-Item '/src/build/*';`
     Get-Item '/src/build/OpenSSL';
 
 # Install Visual Studio 2019
