--- a/dockerfiles/Dockerfile copy.windows
+++ b/dockerfiles/Dockerfile copy.windows
@@ -5,9 +5,21 @@ ARG WINDOWS_VERSION=ltsc2019
 # Builder Image - Windows Server Core
 FROM mcr.microsoft.com/windows/servercore:$WINDOWS_VERSION as builder
 
-RUN setx /M PATH "%PATH%;C:\BuildTools\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin;C:\WinFlexBison"
+# ENV OPENSSL_VERSION 1.1.0.60000000
+# ENV chocolateyUseWindowsCompression false
+
+RUN setx /M PATH "%PATH%;C:\BuildTools\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin;C:\WinFlexBison;C:\Program Files\OpenSSL-Win64\bin"
 
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
+
+WORKDIR /local
+ADD https://slproweb.com/download/Win64OpenSSL-3_0_5.exe /local/Win64OpenSSL.exe
+
+RUN /local/Win64OpenSSL.exe 
+    # -ArgumentList '--quiet ', '--wait ', '--norestart ', '--nocache', `
+    # '--installPath C:\Program Files\OpenSSL-Win64\';
+
+
 WORKDIR /local
 
 # Install Visual Studio 2019
@@ -42,8 +54,22 @@ RUN Start-Process /local/vc_redist.x64.exe -ArgumentList '/install', '/quiet', '
 WORKDIR /src/build
 COPY . /src/
 
-RUN cmake -G "'Visual Studio 16 2019'" -DCMAKE_BUILD_TYPE=Release ../; `
-    cmake --build . --config Release;
+# RUN iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1')); `
+#     choco feature disable --name showDownloadProgress ; `
+#     choco install -y openssl.light --version $env:OPENSSL_VERSION;`
+#     Get-Item "/Program Files/OpenSSL";`
+#     Copy-Item -Path "/Program Files/OpenSSL" -Destination /src/build/;`
+#     Get-Item "/src/build";`
+#     Get-Item "/src/build/OpenSSL";
+
+# RUN iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1')); `
+#     choco feature disable --name showDownloadProgress ; `
+#     choco install -y openssl.light --version $env:OPENSSL_VERSION;
+
+RUN cmake -G "'Visual Studio 16 2019'" -DCMAKE_BUILD_TYPE=Release -DOPENSSL_ROOT_DIR="/Program Files/OpenSSL-Win64" -DOPENSSL_CONF='C:\Program Files\OpenSSL-Win64\bin\openssl.cfg'  ../; ` 
+    cmake --build . --config Release; 
+    
+
 
 # Set up config files and binaries in single /fluent-bit hierarchy for easy copy in later stage
 RUN New-Item -Path  /fluent-bit/etc/ -ItemType "directory"; `
@@ -68,7 +94,6 @@ ARG IMAGE_SOURCE_REVISION
 
 # Metadata as defined in OCI image spec annotations
 # https://github.com/opencontainers/image-spec/blob/master/annotations.md
-LABEL org.opencontainers.image.source="https://github.com/praizz/fluent-bit"
 # LABEL org.opencontainers.image.title="Fluent Bit" `
 #       org.opencontainers.image.description="Fluent Bit is an open source and multi-platform Log Processor and Forwarder which allows you to collect data/logs from different sources, unify and send them to multiple destinations. It's fully compatible with Docker and Kubernetes environments." `
 #       org.opencontainers.image.created=$IMAGE_CREATE_DATE `
@@ -81,6 +106,8 @@ LABEL org.opencontainers.image.source="https://github.com/praizz/fluent-bit"
 #       org.opencontainers.image.source="https://github.com/fluent/fluent-bit" `
 #       org.opencontainers.image.revision=$IMAGE_SOURCE_REVISION
 
+LABEL org.opencontainers.image.source="https://github.com/praizz/fluent-bit"
+
 COPY --from=builder /fluent-bit /fluent-bit
 
 RUN setx /M PATH "%PATH%;C:\fluent-bit\bin"
@@ -89,9 +116,3 @@ ENTRYPOINT [ "C:\fluent-bit\bin\fluent-bit.exe" ]
 # Hadolint gets confused by Windows it seems
 # hadolint ignore=DL3025
 CMD [ "C:\fluent-bit\bin\fluent-bit.exe", "-c", "C:\fluent-bit\etc\fluent-bit.conf" ]
-
-
-
-
-
-
