--- a/dockerfiles/Dockerfile.windows
+++ b/dockerfiles/Dockerfile.windows
@@ -13,6 +13,12 @@ RUN setx /M PATH "%PATH%;C:\BuildTools\Common7\IDE\CommonExtensions\Microsoft\CM
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 WORKDIR /local
 
+RUN iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1')); `
+    choco feature disable --name showDownloadProgress ; `
+    choco install -y openssl.light --version $env:OPENSSL_VERSION;`
+    Copy-Item -Path "/Program Files/OpenSSL/*" -Destination /src/build/;`
+    Get-Item "/src/build/OpenSSL/*";
+
 # Install Visual Studio 2019
 ADD https://aka.ms/vs/16/release/vs_buildtools.exe /local/vs_buildtools.exe
 ADD https://aka.ms/vs/16/release/channel /local/VisualStudio.chman
@@ -46,11 +52,13 @@ WORKDIR /src/build
 COPY . /src/
 
 
-RUN iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1')); `
-    choco feature disable --name showDownloadProgress ; `
-    choco install -y openssl.light --version $env:OPENSSL_VERSION;
+# RUN iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1')); `
+#     choco feature disable --name showDownloadProgress ; `
+#     choco install -y openssl.light --version $env:OPENSSL_VERSION;`
+#     Copy-Item -Path "/Program Files/OpenSSL/*" -Destination /src/build/;`
+#     Get-Item "/src/build/OpenSSL/*";
 
-RUN cmake -G "'Visual Studio 16 2019'" -DCMAKE_BUILD_TYPE=Release -DOPENSSL_ROOT_DIR="/Program Files/OpenSSL"../; `
+RUN cmake -G "'Visual Studio 16 2019'" -DCMAKE_BUILD_TYPE=Release -DOPENSSL_ROOT_DIR="/OpenSSL"../; `
     cmake --build . --config Release;
 
 # Set up config files and binaries in single /fluent-bit hierarchy for easy copy in later stage
