--- a/dockerfiles/Dockerfile.windows
+++ b/dockerfiles/Dockerfile.windows
@@ -15,11 +15,11 @@ WORKDIR /local
 
 RUN iex ((new-object net.webclient).DownloadString('https://chocolatey.org/install.ps1')); `
     choco feature disable --name showDownloadProgress ; `
-    choco install -y openssl.light --version $env:OPENSSL_VERSION;
-    # Copy-Item -Path '/Program Files/OpenSSL/*' -Destination /src/build/;`
-    # Get-Item '/src/build/OpenSSL/*';
+    choco install -y openssl.light --version $env:OPENSSL_VERSION;`
+    Copy-Item -Path '/Program Files/OpenSSL/*' -Destination /src/build/;`
+    Get-Item '/src/build/*';
 
-COPY 'C:\Program Files\OpenSSL\' /src/build/
+# COPY 'C:\Program Files\OpenSSL\' /src/build/
 
 
 # Install Visual Studio 2019
